--- a/video_anomaly_detection/UCSD_pedestrain/UCSDPedestrain_demo.ipynb
+++ b/video_anomaly_detection/UCSD_pedestrain/UCSDPedestrain_demo.ipynb
@@ -970,7 +970,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Weakly Supervised Video Anomaly Detection Methods"
+    "<!-- ## 6. Weakly Supervised Video Anomaly Detection Methods -->"
    ]
   },
   {
@@ -978,9 +978,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The weakly-supervised video anomaly detection assumes that **video-level normal/anomaly labels are given for training**. Compared to the unsupervised video anomaly detection, obtaining such video-level labels requires **more human effort** however compared to usupervised methods, weakly supervised paradigm offers several advantages: \n",
+    "<!-- The weakly-supervised video anomaly detection assumes that **video-level normal/anomaly labels are given for training**. Compared to the unsupervised video anomaly detection, obtaining such video-level labels requires **more human effort** however compared to usupervised methods, weakly supervised paradigm offers several advantages:  -->\n",
     "\n",
-    "1. Weak supervision only requires video-level annotations, where the presence of anomalous events is indicated, but their start and end locations are unknown which allows for the construction of **large-scale datasets** for anomaly detection.\n",
+    "<!-- 1. Weak supervision only requires video-level annotations, where the presence of anomalous events is indicated, but their start and end locations are unknown which allows for the construction of **large-scale datasets** for anomaly detection.\n",
     "2. The presence of both normal and abnormal samples and their annotation enables the model to learn more discriminative representations to **improve its performance** on large-scale datasets.\n",
     "\n",
     "One of the most famouse large-scale dataset video anomaly detection dataset with video-level labels is **[UCF-crime dataset](https://www.crcv.ucf.edu/projects/real-world/)** that contains 1,900 untrimmed real-world outdoor and indoor surveillance videos. The total length of the videos is **128 hours**, which contains **13 classes** of anomalous events including: 1. Abuse, 2. Arrest, 3. Arson, 4. Assault, 5. Burglary, 6. Explosion, 7. Fighting, 8. Road Accident, 9. Robbery, 10. Shooting, 11. Stealing, 12. Shoplifting, 13. Vandalism. \n",
@@ -989,7 +989,7 @@
     "\n",
     "- Learning Prompt-Enhanced Context Features for Weakly-Supervised Video Anomaly Detection: https://github.com/yujiangpu20/PEL4VAD\n",
     "- Unbiased Multiple Instance Learning for Weakly Supervised Video Anomaly Detection: https://github.com/ktr-hubrt/umil\n",
-    "- Self-Supervised Sparse Representation for Video Anomaly Detection: https://github.com/louisYen/S3R"
+    "- Self-Supervised Sparse Representation for Video Anomaly Detection: https://github.com/louisYen/S3R -->"
    ]
   }
  ],
