--- a/video_anomaly_detection/UCSD_pedestrain/UCSDPedestrain_demo.ipynb
+++ b/video_anomaly_detection/UCSD_pedestrain/UCSDPedestrain_demo.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Frame-level Video Anomaly Detection on UCSD Pedestarian Dataset"
+    "# Unsupervised Video Anomaly Detection on UCSD Pedestarian Dataset"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "source": [
     "The UCSD Anomaly Detection dataset is created by utilizing a fixed camera placed at an elevated position for observation, providing an overview of pedestrian walkways. The dataset was collected in a spacious walkway where pedestrians moved parallel to the camera plane. Across these walkways, the density of the crowd varied from sparse to becoming highly congested.\n",
     "\n",
-    "In the **normal scenario**, the recorded video portrayed only pedestrians. **Abnormal scenarios** accured due to: \n",
+    "In the **normal scenario**, the recorded video portrayed only pedestrians. **Abnormal scenarios** accurred due to: \n",
     "\n",
     "1. the presence of non-pedestrian entities moving within the walkways, e.g., cyclists, skateboarders, small carts, and individuals traversing the walkway.\n",
     "2. atypical patterns in pedestrian movement.\n",
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reconstruction-based** approaches are one of the common **unsupervised frame-level video anomaly detection methods**. These methods are designed to train an **auto-encoder based model** to recostruct normal training samples and detect anomalies in test set by measuring their reconstruction error. However they are limited in generalizing reconstruction ability to unusual cases as it often struggles to accurately recreate a wide variety of normal patterns. \n",
+    "**Reconstruction-based** approaches are one of the common **unsupervised frame-level video anomaly detection methods**. These methods are designed to train an **auto-encoder based model** to reconstruct normal training samples and detect anomalies in test set by measuring their reconstruction error. However they are limited in generalizing reconstruction ability to unusual cases as it often struggles to accurately recreate a wide variety of normal patterns. \n",
     "\n",
     "\n",
     "![diversity.png](images/diversity.png)"
